# fc-cl

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.toml
src/: __init__.py  cli.py  core.py
src/fc_cli/: __init__.py  exceptions.py  main.py  processor.py  utils.py
