[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "face-compare-cli"
version = "0.1.0"
description = "CLI tool for face similarity comparison"
authors = [{name="lanseria", email="zhangchao564265135@gmail.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "face-recognition>=1.3.0",
    "numpy>=1.24.0",
    "pillow>=10.0.0"
]

[project.scripts]
face-compare = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

# 新增 Hatch 特定配置
[tool.hatch.version]
path = "src/__init__.py"  # 版本号存储位置

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.0.280"
]
