[build-system]
requires = ["hatchling>=1.8.0"]
build-backend = "hatchling.build"

[project]
name = "face-compare-cli"
version = "1.0.0"
description = "CLI tool for face comparison using InsightFace"
authors = [{name = "Your Name", email = "your@email.com"}]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["face-recognition", "biometrics", "computer-vision"]

dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.16.3; platform_system == 'Darwin'",
    "onnxruntime-gpu>=1.16.3; platform_system != 'Darwin'",
    "opencv-python-headless>=4.8.0.74",
    "tomli>=1.1.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "mypy>=1.4.1"
]
build = [
    "pyinstaller>=6.0.0",
    "hatch-fancy-pypi-readme>=23.1.0"
]

[project.scripts]
face-compare = "fc_cli.main:app"

[project.urls]
Homepage = "https://github.com/yourname/face-compare-cli"
Documentation = "https://github.com/yourname/face-compare-cli/wiki"
Issues = "https://github.com/yourname/face-compare-cli/issues"

[tool.hatch.version]
source = "file"
path = "src/fc_cli/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fc_cli"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/configs", "README.md", "LICENSE"]
exclude = ["tests", "docs", ".github"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-v --cov=src/fc_cli --cov-report=term-missing"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.mypy]
strict = true
show_error_codes = true
warn_unused_configs = true